--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,11 +31,11 @@ header {
     -webkit-background-clip: text;
     color: transparent;
     width: 700px;
-    background-image: linear-gradient(160deg, #0cf547, #15e6cd, #2f97c1);
+    background-image: linear-gradient(160deg, var(--lightest), var(--light), var(--dark));
 }
 
 .works {
-    background-image: linear-gradient(160deg, #0cf547, #15e6cd, #2f97c1);
+    background-image: linear-gradient(160deg, var(--lightest), var(--light), var(--dark));
 }
 
 .works h2 {
@@ -108,4 +108,35 @@ header {
     border-top-right-radius: 50% 100%;
     border-bottom-left-radius: 50% 100%;
     text-decoration: none;
+}
+
+.about-me {
+    display: flex;
+    justify-content: space-around;
+}
+
+#ya-boy {
+    height: 300px;
+    width: 300px;
+    padding: 80px;
+    border-top-right-radius: 50% 50%;
+    border-bottom-left-radius: 50% 50%;
+    display: inline;
+    object-fit: cover;
+}
+
+.about-me article {
+    width: 50%;
+    float: right;
+    justify-content: center;
+}
+
+.about-me h2 {
+    font-size: 35px;
+    color: #587291;
+    border-bottom: 5px solid var(--light);
+}
+
+.about-me p {
+    font-weight: 300;
 }
