--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,7 @@ header {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    padding: 0 0 150px;
 }
 
 .full {
@@ -139,4 +140,28 @@ header {
 
 .about-me p {
     font-weight: 300;
+}
+
+.contact {
+    background-color: var(--dark);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 0 100px;
+}
+
+.contact h2{
+    font-size: 35px;
+    color: var(--light);
+    border-bottom: 5px solid var(--lightest);
+    margin:0 0 50px;
+    width: 70%;
+
+}
+
+.contact p {
+    color: var(--light);
+    margin: 5px;
+    width: 70%;
+    font-size: 20px;
 }
