--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,12 +21,24 @@ header {
     font-size: 45px;
 }
 
-.intro {
+nav{
+    position: absolute;
+    top: 30px;
+    right: 30px;
+}
+
+nav a {
+    color: var(--light);
+    text-decoration: none;
+    padding: 0 15px;
+    font-size: 30px;
+}
+
+h1 {
     margin: 0;
 }
 
 .neon {
-    margin: 0;
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
@@ -41,7 +53,6 @@ header {
 .works h2 {
     text-align: center;
     color: var(--darkest);
-    
     width: 100%;
     margin: 0;
     padding: 50px 0;
@@ -116,6 +127,11 @@ header {
     justify-content: space-around;
 }
 
+.about-ya-boy {
+    display: flex;
+    align-items: center;
+}
+
 #ya-boy {
     height: 300px;
     width: 300px;
@@ -126,9 +142,8 @@ header {
     object-fit: cover;
 }
 
-.about-me article {
+.about-me div {
     width: 50%;
-    float: right;
     justify-content: center;
 }
 
@@ -154,7 +169,7 @@ header {
     font-size: 35px;
     color: var(--light);
     border-bottom: 5px solid var(--lightest);
-    margin:0 0 50px;
+    margin:30px 0 50px;
     width: 70%;
 
 }
@@ -164,4 +179,49 @@ header {
     margin: 5px;
     width: 70%;
     font-size: 20px;
+}
+
+@media screen and (max-width: 980px) {
+    header{
+        text-align: center;
+    }
+
+    .neon {
+        width: 70%;
+        margin: 0 auto;
+    }
+
+    nav {
+        position: relative;
+        right: 0;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    header {
+        font-size: 35px;
+    }
+    
+    .neon {
+        width: 80%;
+    }
+
+    .half{
+        width: 100%;
+    }
+
+    .about-me {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    #ya-boy {
+        padding: 80px 0;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    header {
+        font-size: 30px;
+    }
 }
