--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,7 @@ h1 {
 
 .horiseon {
     color: white;
-    background-color: #557686;
+    background-color: #8197a1;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 60px;
     padding: 85px 0;
@@ -120,6 +120,17 @@ h1 {
     border-top-right-radius: 50% 100%;
     border-bottom-left-radius: 50% 100%;
     text-decoration: none;
+}
+
+.lyrical-ta {
+    background-color: #172a3a;
+    font-size: 65px;
+    padding: 85px 0;
+    text-decoration: none;
+    color: white;
+    border-bottom-right-radius: 25% 100%;
+    border-top-left-radius: 25% 100%;
+    font-weight: bold;
 }
 
 .about-me {
