--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,17 @@ h1 {
     text-decoration: none;
 }
 
+.weather-dashboard {
+    background-color: #3a0ca3;
+    color: #b5179e;
+    font-family: 'impact', sans-serif;
+    font-size: 60px;
+    padding: 50px 0;
+    border-top-right-radius: 50% 100%;
+    border-bottom-left-radius: 50% 100%;
+    text-decoration: none;
+}
+
 .lyrical-ta {
     background-color: #172a3a;
     font-size: 65px;
